--- a/src/main/resources/templates/user/contacts.html
+++ b/src/main/resources/templates/user/contacts.html
@@ -76,7 +76,7 @@
                      </tr>
                   </thead>
                   <tbody>
-                     <tr th:each="contact : ${contacts}" class="bg-white border-b dark:bg-gray-700 dark:border-gray-900 hover:bg-gray-100 dark:hover:bg-gray-600">
+                     <tr th:each="contact : ${pageContacts}" class="bg-white border-b dark:bg-gray-700 dark:border-gray-900 hover:bg-gray-100 dark:hover:bg-gray-600">
                            <th scope="row" class="flex items-center px-6 py-4 text-gray-900 whitespace-nowrap dark:text-white">
                               <img class="w-10 h-10 rounded-full" th:src="@{${contact.picture}}" onerror="this.onerror=null; this.src='https://upload.wikimedia.org/wikipedia/commons/2/2c/Default_pfp.svg'">
                               <div class="ps-3">
@@ -103,6 +103,35 @@
                      </tr>
                   </tbody>
                </table>
+               <!-- pagination -->
+               <div class="pagination_container p-5 text-center justify-center flex text-gray-700 bg-gray-100 dark:bg-gray-900 dark:text-gray-300">
+                  <nav aria-label="Page navigation example">
+                     <ul class="flex items-center -space-x-px h-10 text-base">
+                        <li th:if="${!pageContacts.isFirst}">
+                           <a th:href="@{'/user/contacts/?size='+${pageSize}+'&page='+${pageContacts.number-1}}" class="flex items-center justify-center px-4 h-10 ms-0 leading-tight text-gray-500 bg-white border border-e-0 border-gray-300 rounded-s-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
+                           <span class="sr-only">Previous</span>
+                           <svg class="w-3 h-3 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
+                              <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 1 1 5l4 4"/>
+                           </svg>
+                           </a>
+                        </li>
+                        <li th:each="index : ${#numbers.sequence( 0, pageContacts.totalPages - 1)}">
+                           <a th:href="@{'/user/contacts/?size='+${pageSize}+'&page='+${index}}"
+                           th:class="${index == pageContacts.number ?'z-10 flex items-center justify-center px-4 h-10 leading-tight text-blue-600 border border-blue-300 bg-blue-50 hover:bg-blue-100 hover:text-blue-700 dark:border-gray-700 dark:bg-gray-700 dark:text-white' : 'flex items-center justify-center px-4 h-10 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white'}">
+                              <span th:text="${index + 1}"></span>
+                           </a>
+                        </li>
+                        <li th:if="${!pageContacts.isLast}">
+                           <a th:href="@{'/user/contacts/?size='+${pageSize}+'&page='+${pageContacts.number+1}}" class="flex items-center justify-center px-4 h-10 leading-tight text-gray-500 bg-white border border-gray-300 rounded-e-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
+                           <span class="sr-only">Next</span>
+                           <svg class="w-3 h-3 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
+                              <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4"/>
+                           </svg>
+                           </a>
+                        </li>
+                     </ul>
+                  </nav>
+               </div>
             </div>
 
          </div>
