--- a/src/main/resources/templates/user/search.html
+++ b/src/main/resources/templates/user/search.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" th:replace="~{base:: parent(~{::#content}, ~{::title}, ~{})}">
 <head>
-   <title>All Contacts</title>
+   <title>Search Results</title>
 </head>
 <body>
    <div id="content">
@@ -13,8 +13,8 @@
 
       <!-- page content -->
       <div class="sm:pl-64 lg:pt-3 pt-9 sm:pt-16 justify-center flex flex-col items-center">
-         <h1 class="font-bold text-2xl">All Your Contacts</h1>
-         <p>List of your contacts...</p>
+         <h1 class="font-bold text-2xl">Search Results</h1>
+         <p th:text="${pageContacts.totalElements} + ' results found'"></p>
 
 
          <!-- table -->
@@ -102,7 +102,7 @@
                   <nav aria-label="Page navigation example">
                      <ul class="flex items-center -space-x-px h-10 text-base">
                         <li th:if="${!pageContacts.isFirst}">
-                           <a th:href="@{'/user/contacts/?size='+${pageSize}+'&page='+${pageContacts.number-1}}" class="flex items-center justify-center px-4 h-10 ms-0 leading-tight text-gray-500 bg-white border border-e-0 border-gray-300 rounded-s-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
+                           <a th:href="@{'/user/contacts/search?size='+${pageSize}+'&page='+${pageContacts.number-1}+'&field='+${contactSearchForm.field}+'&keyword='+${contactSearchForm.keyword}}" class="flex items-center justify-center px-4 h-10 ms-0 leading-tight text-gray-500 bg-white border border-e-0 border-gray-300 rounded-s-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
                            <span class="sr-only">Previous</span>
                            <svg class="w-3 h-3 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
                               <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 1 1 5l4 4"/>
@@ -110,13 +110,13 @@
                            </a>
                         </li>
                         <li th:each="index : ${#numbers.sequence( 0, pageContacts.totalPages - 1)}">
-                           <a th:href="@{'/user/contacts/?size='+${pageSize}+'&page='+${index}}"
+                           <a th:href="@{'/user/contacts/search?size='+${pageSize}+'&page='+${index}+'&field='+${contactSearchForm.field}+'&keyword='+${contactSearchForm.keyword}}"
                            th:class="${index == pageContacts.number ?'z-10 flex items-center justify-center px-4 h-10 leading-tight text-blue-600 border border-blue-300 bg-blue-50 hover:bg-blue-100 hover:text-blue-700 dark:border-gray-700 dark:bg-gray-700 dark:text-white' : 'flex items-center justify-center px-4 h-10 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white'}">
                               <span th:text="${index + 1}"></span>
                            </a>
                         </li>
                         <li th:if="${!pageContacts.isLast}">
-                           <a th:href="@{'/user/contacts/?size='+${pageSize}+'&page='+${pageContacts.number+1}}" class="flex items-center justify-center px-4 h-10 leading-tight text-gray-500 bg-white border border-gray-300 rounded-e-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
+                           <a th:href="@{'/user/contacts/search?size='+${pageSize}+'&page='+${pageContacts.number+1}+'&field='+${contactSearchForm.field}+'&keyword='+${contactSearchForm.keyword}}" class="flex items-center justify-center px-4 h-10 leading-tight text-gray-500 bg-white border border-gray-300 rounded-e-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
                            <span class="sr-only">Next</span>
                            <svg class="w-3 h-3 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
                               <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4"/>
@@ -126,11 +126,10 @@
                      </ul>
                   </nav>
                </div>
-               <h1 th:if="${pageContacts.isEmpty}" class="font-bold text-2xl text-center mt-5 mb-5">No contacts found</h1>
+               <h1 th:if="${pageContacts.isEmpty}" class="font-bold text-2xl text-center mt-5 mb-5">Contact not found</h1>
             </div>
 
          </div>
-
 
       </div>
 
